<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.openmrs.maven.parents</groupId>
        <artifactId>maven-parent-openmrs-module</artifactId>
        <version>1.1.1</version>
    </parent>

	<groupId>org.openmrs.module</groupId>
	<artifactId>tasks</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Tasks</name>
	<description>Provides backend for the Task List feature in O3 via a FHIR API. Loads System Tasks at server startup time. Provides logic for CDS-driven tasks.</description>

	<url>https://wiki.openmrs.org/x/FQ4z</url>

	<scm>
		<connection>scm:git:git@github.com:openmrs/openmrs-module-tasks.git</connection>
		<developerConnection>scm:git:git@github.com:openmrs/openmrs-module-tasks.git</developerConnection>
		<url>https://github.com/openmrs/openmrs-module-tasks/</url>
	</scm>

	<modules>
		<module>api</module>
		<module>omod</module>
	</modules>

	<repositories>
		<repository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>https://mavenrepo.openmrs.org/public</url>
		</repository>
		<repository>
			<id>central</id>
			<name>Maven Repository Switchboard</name>
			<layout>default</layout>
			<url>https://repo1.maven.org/maven2</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>https://mavenrepo.openmrs.org/public</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <target>17</target>
                        <source>17</source>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
				<!-- Surefire plugin for Java 17 compatibility with old Mockito/PowerMock -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<argLine>
							--add-opens java.base/java.lang=ALL-UNNAMED
							--add-opens java.base/java.lang.invoke=ALL-UNNAMED
							--add-opens java.base/java.util=ALL-UNNAMED
						</argLine>
					</configuration>
				</plugin>
				<!-- Spotless plugin -->
				<plugin>
					<groupId>com.diffplug.spotless</groupId>
					<artifactId>spotless-maven-plugin</artifactId>
					<version>2.27.2</version>
					<configuration>
						<java>
							<licenseHeader>
								<file>${project.basedir}/license-header.txt</file>
							</licenseHeader>
							<eclipse>
								<file>${project.basedir}/OpenMRSFormatter.xml</file>
							</eclipse>
							<removeUnusedImports/>
							<importOrder>
								<order>javax,java</order>
							</importOrder>
						</java>
						<formats>
							<format>
								<includes>
									<include>**/*.xml</include>
								</includes>
								<licenseHeader>
									<file>${project.basedir}/license-header.txt</file>
									<delimiter>^(?!&lt;\?xml)</delimiter>
								</licenseHeader>
							</format>
						</formats>
					</configuration>
					<executions>
						<execution>
							<id>spotless-apply</id>
							<phase>validate</phase>
							<goals>
								<goal>apply</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>


    <properties>
        <openmrsPlatformVersion>2.7.0</openmrsPlatformVersion>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Force Mockito version to avoid conflicts with old versions from OpenMRS dependencies -->
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>3.12.4</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-inline</artifactId>
                <version>3.12.4</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
